Refactor and enhance code logic across multiple modules.
Refactored payment validation logic with a streamlined `switch` structure in `Invoice`. Added validation for obsolete measurement units in inventory modules. Enhanced purchase order handling by enforcing consistent currency and additional exchange rate checks. Simplified UI components in `FileManager`, `BlockView`, and assembly-related classes. Updated Maven project version to 14.0.4.