@@ -8,14 +8,19 @@ import com.vaadin.flow.component.icon.VaadinIcon;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.TimeUnit;
 
 public class TreeSearchField<P extends T, T> extends TextField {
 
     private final ChildVisitor<P, T> tree;
     private int current = -1;
-    private String text = "";
-    private final List<T> list = new ArrayList<>();
+    private String searchText = "";
+    private List<Match> matches;
     private final View view;
+    private CountDownLatch searching;
+    private boolean continueSearch;
+    private final ApplicationEnvironment environment = ApplicationEnvironment.get();
 
     public TreeSearchField(ChildVisitor<P, T> tree) {
         this.tree = tree;
@@ -25,44 +30,19 @@ public class TreeSearchField<P extends T, T> extends TextField {
             throw new SORuntimeException();
         }
         setPlaceholder("Text to search");
-        ImageButton ib = new ImageButton("Search backward", VaadinIcon.ANGLE_DOUBLE_UP, e -> search(true));
+        ImageButton ib = new ImageButton("Search backward", VaadinIcon.ANGLE_DOUBLE_UP, e -> show(true));
         ib.getElement().setAttribute("slot", "prefix");
         getElement().appendChild(ib.getElement());
-        ib = new ImageButton("Search forward", VaadinIcon.ANGLE_DOUBLE_DOWN, e -> search(false));
+        ib = new ImageButton("Search forward", VaadinIcon.ANGLE_DOUBLE_DOWN, e -> show(false));
         ib.getElement().setAttribute("slot", "prefix");
         getElement().appendChild(ib.getElement());
-        addKeyPressListener(Key.ENTER, e -> search(false));
-        addValueChangeListener(e -> search(false));
+        addKeyPressListener(Key.ENTER, e -> doSearch());
+        addValueChangeListener(e -> doSearch());
     }
 
-    private void search(boolean backward) {
-        String s = getValue().trim().toLowerCase();
-        if(s.isEmpty()) {
-            return;
-        }
-        if(s.equals(text)) {
-            continueSearch(backward);
-            return;
-        }
-        text = s;
-        current = -1;
-        list.clear();
-        tree.listRoots().forEach(r -> {
-            if(contains(r)) {
-                list.add(r);
-            }
-            tree.visitChildren(r, t -> {
-                if(contains(t)) {
-                    list.add(t);
-                }
-            }, true);
-        });
-        continueSearch(false);
-    }
-
-    private void continueSearch(boolean backward) {
-        if(list.isEmpty()) {
-            view.clearAlerts();
+    private void show(boolean backward) {
+        view.clearAlerts();
+        if(matches.isEmpty()) {
             view.message("No matches found");
             return;
         }
@@ -71,8 +51,21 @@ public class TreeSearchField<P extends T, T> extends TextField {
         } else {
             ++current;
         }
-        if(current < 0 || current >= list.size()) {
-            view.clearAlerts();
+        boolean next = true;
+        while(current >= matches.size() && searching != null && searching.getCount() > 0) {
+            if(next) {
+                next = false;
+                view.message("Next match...");
+            }
+            try {
+                if(searching.await(1, TimeUnit.SECONDS)) {
+                    break;
+                }
+            } catch (InterruptedException e) {
+                break;
+            }
+        }
+        if(current < 0 || current >= matches.size()) {
             view.message("No more matches");
             if(backward) {
                 ++current;
@@ -85,7 +78,8 @@ public class TreeSearchField<P extends T, T> extends TextField {
             return;
         }
         @SuppressWarnings("unchecked") DataTreeGrid<T> grid = (DataTreeGrid<T>) tree;
-        T selected = list.get(current);
+        Match match = matches.get(current);
+        T selected = match.item;
         List<P> roots = tree.listRoots();
         //noinspection SuspiciousMethodCalls
         if(!roots.contains(selected)) {
@@ -98,13 +92,15 @@ public class TreeSearchField<P extends T, T> extends TextField {
             }
         }
         grid.select(selected);
-        grid.scrollTo(selected);
+        ((DataTreeGrid<?>) tree).scrollToIndex(match.path);
         focus();
+        view.message("Match: " + (current + 1) +
+                (searching != null && searching.getCount() > 0 ? "" : ("/" + matches.size())));
     }
 
     private boolean contains(Object row) {
         try {
-            return ApplicationEnvironment.get().toString(row).toLowerCase().contains(text);
+            return environment.toString(row).toLowerCase().contains(searchText);
         } catch(Throwable ignored) {
         }
         return false;
@@ -113,7 +109,6 @@ public class TreeSearchField<P extends T, T> extends TextField {
     private List<T> children(T parent) {
         List<T> children = new ArrayList<>();
         tree.visitChildren(parent, children::add, false);
-        children.remove(0);
         return children;
     }
 
@@ -131,9 +126,59 @@ public class TreeSearchField<P extends T, T> extends TextField {
                 return true;
             }
             while(parentTree.size() > count) {
-                parentTree.remove(parentTree.size() - 1);
+                parentTree.removeLast();
             }
         }
         return false;
+    }
+
+    private void doSearch() {
+        Thread.startVirtualThread(this::doSearchInt);
+    }
+
+    private void doSearchInt() {
+        if(searching != null && searching.getCount() > 0) {
+            continueSearch = false;
+            try {
+                searching.await();
+            } catch (InterruptedException e) {
+                return;
+            }
+        }
+        searchText = getValue().strip().toLowerCase();
+        if(searchText.isEmpty()) {
+            return;
+        }
+        view.getApplication().access(() -> view.message("Searching..."));
+        searching = new CountDownLatch(1);
+        matches = new ArrayList<>();
+        current = -1;
+        continueSearch = true;
+        tree.visitAll((item, path) -> {
+            if(contains(item)) {
+                matches.add(new Match(item, path));
+                if(current == -1 && continueSearch) {
+                    view.getApplication().access(() -> show(false));
+                }
+            }
+        }, p -> continueSearch);
+        searching.countDown();
+        if(matches.isEmpty()) {
+            view.getApplication().access(() -> {
+                view.clearAlerts();
+                view.message("No matches found");
+            });
+        }
+    }
+
+    private class Match {
+
+        private final T item;
+        private final int[] path;
+
+        private Match(T item, int[] path) {
+            this.item = item;
+            this.path = path;
+        }
     }
 }
